k8s/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
  - "*"
  gateways:
  - rhtech-gateway
  http:
  - route:
    - destination:
        host: backend-service
        subset: v1
      weight: 100
